@@ -20,6 +20,7 @@ wxMSW:
 - Separators are now correctly shown in the toolbars under Windows XP
 - Fixed multiline tooltips handling.
 - Fixed wxSlider::GetSelEnd() (Atilim Cetin)
+- Fixed accelerators of menu items added to already attached submenus
 
 wxUniv:
 
